test/tests/errors/error-procedure-no-rec.sm
// true
// false
/**/
/**/

program {
    proc sum(x) {
        if (x == 0) {}
        else {output x; sum(x - 1);}
    }
    sum(5);
}